[package]
name = "CoolWHIP"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio-stream = { version = "0.1.8", features = ["net"] }
crossfire = "0.1"